Migrate ticket types, priorities, statuses from config file to DB

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -214,5 +214,58 @@
     "Below is the Kanban Board for tickets configured on :app": "Ci-dessous le tableau Kanban pour les tickets configurés sur :app",
     "Kanban Board": "Tableau Kanban",
     "Oops!": "Oups !",
-    "You don't have permissions to change this ticket status": "Vous n'êtes pas autorisé à modifier le statut de ce ticket"
+    "You don't have permissions to change this ticket status": "Vous n'êtes pas autorisé à modifier le statut de ce ticket",
+    "Below you can configure the different components of :app": "Ci-dessous vous pouvez configurer les différents composants de :app",
+    "User Management": "Gestion des utilisateurs",
+    "Here you can show and manage the users list configured on :app": "Ici vous pouvez visualiser et gérer la liste des utilisateurs de :app",
+    "Here you can show and manage the tickets statuses list configured on :app": "Ici vous pouvez visualiser et gérer la liste des statuts des tickets de :app",
+    "Here you can show and manage the tickets priorities list configured on :app": "Ici vous pouvez visualiser et gérer la liste des priorités des tickets de :app",
+    "Here you can show and manage the tickets types list configured on :app": "Ici vous pouvez visualiser et gérer la liste des types des tickets de :app",
+    "Manage users": "Gérer les utilisateurs",
+    "Manage statuses": "Gérer les statuts",
+    "Manage priorities": "Gérer les priorités",
+    "Manage types": "Gérer les types",
+    "Go back to administration": "Revenir à l'administration",
+    "Ticket types": "Types des tickets",
+    "Ticket priorities": "Priorités des tickets",
+    "Ticket statuses": "Statuts des tickets",
+    "Below is the list of configured tickets types in :app": "Ci-dessous la liste des types des tickets configurés sur :app",
+    "Below is the list of configured tickets priorities in :app": "Ci-dessous la liste des priorités des tickets configurés sur :app",
+    "Below is the list of configured tickets statuses in :app": "Ci-dessous la liste des statuts des tickets configurés sur :app",
+    "Search for tickets statuses": "Rechercer les statuts des tickets",
+    "Colors": "Couleurs",
+    "Default status": "Statut par défaut",
+    "Text color": "Couleur de texte",
+    "Background color": "Couleur de fond",
+    "Edit status": "Modifier le statut",
+    "No ticket statuses to show!": "Aucun statuts de ticket à afficher !",
+    "Update user": "Modifier l'utilisateur",
+    "Update status": "Modifier le statut",
+    "Status created": "Statut créé",
+    "Status deleted": "Statut supprimé",
+    "The status has been created": "Le statut est créé",
+    "The status's details has been updated": "Les informations du statut ont été mise à jour",
+    "The status has been deleted": "Le statut a été supprimé",
+    "Status deletion": "Suppression du statut",
+    "Are you sure you want to delete this status?": "Êtes-vous sûr de vouloir supprimé ce statut ?",
+    "Check this box if this status should be assigned by default to new tickets": "Cochez cette case si ce statut doit être affecté par défaut aux nouveaux tickets",
+    "Update priority": "Modifier la priorité",
+    "Priority created": "Priorité créée",
+    "Priority deleted": "Priorité supprimée",
+    "The priority has been created": "La priorité est créée",
+    "The priority's details has been updated": "Les informations de la priorité ont été mise à jour",
+    "The priority has been deleted": "La priorité a été supprimé",
+    "Priority deletion": "Suppression de la priorité",
+    "Are you sure you want to delete this priority?": "Êtes-vous sûr de vouloir supprimé cette priorité ?",
+    "Update type": "Modifier la priorité",
+    "Type created": "Type créé",
+    "Type deleted": "Type supprimé",
+    "The type has been created": "Le type est créé",
+    "The type's details has been updated": "Les informations du type ont été mise à jour",
+    "The type has been deleted": "Le type a été supprimé",
+    "Type deletion": "Suppression du type",
+    "Are you sure you want to delete this type?": "Êtes-vous sûr de vouloir supprimé ce type ?",
+    "Check the <a href='https://fontawesome.com/icons' target='_blank' class='text-blue-500 underline'>fontawesome icons here</a> to choose your right icon": "Voir <a href='https://fontawesome.com/icons' target='_blank' class='text-blue-500 underline'>les icônes fontawesome ici</a> pour choisir votre icône",
+    "Selected icon:": "Icône sélectionnée",
+    "Icon": "Icône"
 }
