--- a/lang/fr.json
+++ b/lang/fr.json
@@ -273,5 +273,9 @@
     "See details": "Voir les détails",
     "Click to copy url to ticket": "Cliquez pour copier le lien vers le ticket",
     "Ticket url copied": "Url du ticket copié",
-    "The ticket url successfully copied to your clipboard": "L'URL du ticket a été copiée avec succès dans votre presse-papiers"
+    "The ticket url successfully copied to your clipboard": "L'URL du ticket a été copiée avec succès dans votre presse-papiers",
+    "Activity logs": "Journaux d'activité",
+    "Here you can see all activity logs of :app": "Ici vous pouvez voir tous les journaux d'activité de :app",
+    "Below is the list of activity logs of :app": "Ci-dessous les journaux d'activité de :app",
+    "Search for activity logs": "Rechercher les journaux d'activité"
 }
