--- a/lang/fr.json
+++ b/lang/fr.json
@@ -302,5 +302,6 @@
     "Are you sure you want to delete this company?": "Êtes-vous sûr de vouloir supprimer cette entreprise ?",
     "Companies Management": "Gestion des entreprises",
     "Here you can show and manage the companies list configured on :app": "Ici vous pouvez visualiser et gérer la liste des entreprises de :app",
-    "Manage companies": "Gérer les entreprises"
+    "Manage companies": "Gérer les entreprises",
+    "Company activated": "Entreprise activée"
 }
