--- a/lang/fr.json
+++ b/lang/fr.json
@@ -304,5 +304,9 @@
     "Here you can show and manage the companies list configured on :app": "Ici vous pouvez visualiser et gérer la liste des entreprises de :app",
     "Manage companies": "Gérer les entreprises",
     "Company activated": "Entreprise activée",
-    "Edit company": "Modifier l'entreprise"
+    "Edit company": "Modifier l'entreprise",
+    "Use same permissions of": "Utiliser les mêmes permission que",
+    "Update the permissions of this user based on another user's permissions": "Mettre à jour les permissions de cet utilisateur en se basant sur les permissions d'un autre utilisateur",
+    "Assign all permissions": "Assigner toutes les permissions",
+    "Remove all permissions": "Enlever toutes les permissions"
 }
