Work with roles instead of permissions

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -309,8 +309,26 @@
     "Update the permissions of this user based on another user's permissions": "Mettre à jour les permissions de cet utilisateur en se basant sur les permissions d'un autre utilisateur",
     "Assign all permissions": "Assigner toutes les permissions",
     "Remove all permissions": "Enlever toutes les permissions",
+    "Assign all roles": "Assigner toutes les rôles",
+    "Remove all roles": "Enlever toutes les rôles",
     "Company users": "Utilisateurs de l'entreprise",
     "Yes": "Oui",
     "No": "Non",
-    "All users": "Tous les utilisateurs"
+    "All users": "Tous les utilisateurs",
+    "Manage user roles": "Gérer les rôles d'utilisateurs",
+    "Role name": "Nom du rôle",
+    "Edit role": "Modifier le rôle",
+    "Roles": "Rôles",
+    "Below is the list of configured user roles giving access to user of :app": "Ci-dessous la liste des rôles donnant accès aux utilisateur de :app",
+    "Create a new role": "Créer un nouveau rôle",
+    "Update role": "Modifier le rôle",
+    "Role created": "Rôle créé",
+    "Role deleted": "Rôle supprimé",
+    "Role deletion": "Suppression du rôle",
+    "Role updated": "Rôle mis à jour",
+    "The user role has been created": "Le rôle utilisateur a été créé",
+    "The role's details has been updated": "Les détails du rôle ont été mis à jour",
+    "The role has been deleted": "Le rôle a été supprimé",
+    "Are you sure you want to delete this role?": "Êtes-vous sûr de vouloir supprimer ce rôle ?",
+    "User roles": "Rôles de l'utilisateur"
 }
