Project - Company integration

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -286,6 +286,7 @@
     "Type a message..": "Tapez un message..",
     "Send": "Envoyer",
     "No messages yet!": "Aucun message pour le moment !",
+    "Company": "Entreprise",
     "Company name": "Nom de l'entreprise",
     "Logo": "Logo",
     "Companies": "Entreprises",
